--- a/P006599.opf/layers/v001/Pagination.yml
+++ b/P006599.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: fa9f68c595d2436aa5584a77a5c1f197
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   4a16e16f407f4410b823cb81d393091c:
