--- a/P006599.opf/meta.yml
+++ b/P006599.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P006599
 initial_creation_type: ocr
+created_at: 21/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG11901
   title: གསང་འདུས་སྟོང་ཐུན། ༼ས་སྐྱ་རྒྱལ་ཡོངས་གསུང་རབ་སློབ་གཉེར་ཁང་གི་གློག་ཀླད་པར་མ།༽
